# SampleCalc

./: CMakeLists.txt  README.md
.github/workflows/: DeployUbuntu.yml  DeployWindows.yml  UnitTest.yml
src/: SampleCalc.hpp  main.cpp
test/: TestSampleCalc.cpp
